--- a/model/pom.xml
+++ b/model/pom.xml
@@ -11,5 +11,6 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>summersky-model</artifactId>
-
+    <name>model</name>
+    <url>http://maven.apache.org</url>
 </project>
