--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,13 @@
     </parent>
     <modules>
         <module>core</module>
-        <module>model</module>
         <module>dao</module>
         <module>service</module>
         <module>webapi</module>
-        <module>core</module>
+        <module>model</module>
+        <module>webapi</module>
+        <module>webapi</module>
+        <module>webapi</module>
     </modules>
 
     <!--申明依赖关系-->
