增加spring cloud  config 和hystrix

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
     config:
       server:
         git:
-          uri: git@github.com:nobodyiam/config-repo.git
+          uri: https://github.com/flybpc/config-repo.git
+          clone-on-start: true
 
 server:
   port: 8888
