--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -9,21 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>summersky-webapi</artifactId>
-	<dependencies>
+    <artifactId>eureka-server</artifactId>
+    <dependencies>
         <dependency>
-            <groupId>com.flybpc</groupId>
-            <artifactId>summersky-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.flybpc</groupId>
-            <artifactId>summersky-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
         </dependency>
     </dependencies>
+
 </project>
